# DataHacks

./: .env.example  .gitignore  DATA-FLOW.md  DETAILED-OVERVIEW.md  EMAIL_CONFIRMATION_SYSTEM.md  README.md  VAPI_TWILIO_VOICE_CALLING_INTEGRATION.md  snaptrash-plan.md
.claude/: launch.json  settings.json
.cursor/rules/: snaptrash-core.mdc
.cursor/skills/databricks-snaptrash/: SKILL.md
.cursor/skills/firecrawl-snaptrash/: SKILL.md
.cursor/skills/snaptrash/: SKILL.md
.cursor/skills/ui-ux-snaptrash/: SKILL.md
apps/analytics/: README.md  pyproject.toml
apps/analytics/notebooks/: 01_load_msw.py  01b_load_gold_tables.py  02_aggregations.py  03_prophet_forecast.py
apps/analytics/src/snaptrash_analytics/aggregations/: locality_agg.py  restaurant_rolling.py  score_signals.py  sustainability_score.py  threshold_check.py
apps/analytics/src/snaptrash_analytics/dev/: __init__.py  seed_synthetic_scans.py
apps/analytics/src/snaptrash_analytics/forecasting/: prophet_county.py  prophet_forecast.py
apps/analytics/src/snaptrash_analytics/ingest/: firecrawl_jobs.py  load_census_data.py  load_food_prices.py  load_gold_tables.py  load_msw_dryad.py  load_shelf_life.py
apps/analytics/src/snaptrash_analytics/readers/: insights_reader.py
apps/analytics/tests/: test_recommendation.py
apps/frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
apps/frontend/src/: App.css  App.tsx  index.css
apps/frontend/src/lib/: api.ts
apps/frontend/src/pages/: Index.tsx
apps/ingestion/: README.md  pyproject.toml
apps/ingestion/src/snaptrash_ingestion/: main.py
apps/ingestion/src/snaptrash_ingestion/routes/: analytics.py  insights.py  scan.py
apps/ingestion/src/snaptrash_ingestion/services/: food_analysis.py  grok_vision.py  groq_vision.py  pipeline_trigger.py  plastic_analysis.py  s3_client.py
apps/ingestion/src/snaptrash_ingestion/writers/: databricks_writer.py
apps/ingestion/tests/: test_food_analysis.py  test_plastic_analysis.py
apps/ios/SnapTrashCamera/: Info.plist  README.md
apps/ios/SnapTrashCamera/SnapTrashCamera/: CameraManager.swift  CameraPreviewView.swift  Config.swift  ContentView.swift  LogEntry.swift  LogRowView.swift  MonitorViewModel.swift  SnapTrashCameraApp.swift  UploadManager.swift
apps/ios/SnapTrashCamera/SnapTrashCamera.xcodeproj/: project.pbxproj
apps/voice-alerts/: pyproject.toml
apps/voice-alerts/src/snaptrash_voice_alerts/: __init__.py  report.py  trigger.py
apps/voice-alerts/src/snaptrash_voice_alerts/services/: email_sender.py  vapi_client.py
infrastructure/lambda-detector/: handler.py
scripts/: bootstrap_aws_infra.py  bootstrap_databricks.py  push_to_databricks.py  run_dev.sh  run_pipeline.py  seed_fake_scans.py  voice_alert_call.py
(+2 files in other folders)
