[project]
name = "snaptrash-voice-alerts"
version = "0.1.0"
description = "VAPI + Twilio voice alerts for high plastic waste (locality >150kg/week). Generates reports, triggers calls to hardcoded number, logs to Databricks. Adapts VapiClient from VAPI_TWILIO_VOICE_CALLING_INTEGRATION.md."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "snaptrash-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
snaptrash-common = { path = "../../packages/common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snaptrash_voice_alerts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
